update: replace unsafe with VarHandle